Building extractor initial version

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# Gradle
+**/.gradle
+**/build
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+IntelliJ
+**/.idea
+**/*.iml
+
 
 # Package Files #
 *.jar
