--- a/MongoDBImporter/docker-compose.yaml
+++ b/MongoDBImporter/docker-compose.yaml
@@ -1,9 +1,14 @@
 version: '3'
 services:
   mongodb:
-    image: mongodb/mongodb-community-server:6.0-ubi8
+    image: mongo
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=user
-      - MONGO_INITDB_ROOT_PASSWORD=pass
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=admin
+    logging:
+      options:
+        max-size: 1g
+    ports:
+      - "27017:27017"
     volumes:
       -  ${mongodata}:/data/db
