--- a/MongoDBImporter/versions.properties
+++ b/MongoDBImporter/versions.properties
@@ -9,12 +9,15 @@
 
 plugin.com.github.ben-manes.versions=0.46.0
 
+version.dev.morphia.morphia..morphia-core=2.3.0
+
 version.org.mongodb..mongodb-driver-sync=4.9.0
 
 version.kotlin=1.8.10
 ## # available=1.8.20-Beta
 
-version.dev.morphia.morphia..core=1.6.1
+## unused
+version.dev.morphia.morphia..core=2.3.0
 
 version.com.fasterxml.jackson.core..jackson-databind=2.14.2
 
